Fix vert alignment of match history container

--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -87,7 +87,7 @@ code {
 
 .main-dashboard-container {
   display: flex;
-  height: 100vh;
+  height: 90vh;
   .dashboard-left-col {
     flex: 2;
   }
